Fix bug of pg-native

--- a/apollo-demo/package.json
+++ b/apollo-demo/package.json
@@ -15,6 +15,9 @@
     "graphql-typings": "0.0.1-beta-2",
     "meteor-node-stubs": "~0.2.0",
     "mysql": "^2.11.1",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
+    "pg-native": "^1.10.0",
     "react": "^15.3.2",
     "react-apollo": "^0.5.7",
     "react-dom": "^15.3.2",
